added GTGR info & social learning analysis plan

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1264,7 +1264,7 @@ publisher={American Psychological Association}
 
 @article{logan2019flexmanip,
   title={Is behavioral flexibility manipulatable and, if so, does it improve flexibility and problem solving in a new context?},
-  author={Logan, C.J., and MacPherson, M., and Rowney, C., and Bergeron, L., and Seitz, B., and Blaisdell, A., and Folsom, M., and Johnson-Ulrich, Z., and McCune, K.B.},
+  author={Logan, C J. and MacPherson, M. and Rowney, C. and Bergeron, L. and Seitz, B. and Blaisdell, A. and Folsom, M. and Johnson-Ulrich, Z. and McCune, K B},
   journal={In principle acceptance by PCI Ecology of the version on 26 Mar 2019},
   year={2019},
   url={http://corinalogan.com/Preregistrations/g_flexmanip.html}
@@ -1296,7 +1296,7 @@ publisher={American Psychological Association}
 
 @article{logan2019flexforaging,
   title={Is behavioral flexibility related to foraging and social behavior in a rapidly expanding species?},
-  author={Logan, CJ, and Lukas D, and Bergeron L, and Folsom M, and McCune, KB},
+  author={Logan, C J and Lukas, D and Bergeron, L and Folsom, M and McCune, K B},
   journal={In principle acceptance by PCI Ecology of the version on 6 Aug 2019},
   year={2019},
   url={http://corinalogan.com/Preregistrations/g_flexforaging.html}
@@ -3239,7 +3239,7 @@ url = {http://florianhartig.github.io/DHARMa/},
 
 @article{logan2016flexibilityproblem,
   title={Behavioral flexibility and problem solving in an invasive bird},
-  author={Logan, CJ},
+  author={Logan, C J},
   journal={PeerJ},
   volume={4},
   pages={e1975},
